# font-wandering

./: .gitignore  Cargo.toml  README.md
assets/models/: glyph_encoder_bootstrap_f37072fd.pth  glyph_feature_stats_bootstrap.json
src/: app.rs  cache.rs  font_pipeline.rs  lib.rs  main.rs  ml_pipeline.rs  models.rs  morphology.rs  ui.rs
src/ui/: text_input.rs
training/: README.md  evaluate_model.py  export_runtime_bundle.py  prepare_dataset.py  requirements.txt  train_glyph_encoder.py
